# battle-command-forge

./: .env.example  .gitignore  BMORE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: h200-setup.sh  overnight-10.sh  overnight-mix-match.sh  stress-10-hard.sh  stress-10-prompts.sh  test-architects-multi.sh  test-architects.sh
site/: DEMO-SCRIPT.md  SHOW-HN.md
src/: benchmark.rs  codegen.rs  context.rs  cto.rs  custom_commands.rs  db.rs  editor.rs  enterprise.rs  github.rs  hardware.rs  lib.rs  llm.rs  main.rs  memory.rs  mission.rs  model_config.rs  model_picker.rs  models.rs  report.rs  router.rs  sandbox.rs  secrets.rs  snake.rs  space.rs  stress.rs  swarm.rs  swebench.rs  swebench_eval.rs  swebench_tools.rs  tui.rs  verifier.rs  voice.rs  workspace.rs
