[package]
name = "battlecommand-forge"
version = "0.1.0"
edition = "2021"
description = "Quality-first AI coding army: single Rust binary that generates production-grade projects via a 9-stage TDD pipeline with a 9.2/10 quality gate"
authors = ["mrdushidush <mrdushidush@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/mrdushidush/battle-command-forge"
homepage = "https://github.com/mrdushidush/battle-command-forge"
readme = "README.md"
keywords = ["ai", "codegen", "ollama", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
futures-util = "0.3"
toml = "0.8"
dotenvy = "0.15"

[profile.release]
opt-level = "z"
lto = true
strip = true
